kubernetes/names-detector-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\kubernetes-converts\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: names-detector-2
  name: names-detector-2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: names-detector-2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\kubernetes-converts\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/net-main: "true"
        io.kompose.service: names-detector-2
    spec:
      containers:
        - image: icr.io/week1-saad/names_detector_2:SHORT_SHA
          name: names-detector-2
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
