kubernetes/names-detector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\kubernetes-converts\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: names-detector
  name: names-detector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: names-detector
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\kubernetes-converts\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/net-main: "true"
        io.kompose.service: names-detector
    spec:
      containers:
        - image: icr.io/week1-saad/names_detector:$SHORT_SHA
          name: names-detector
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
